<RelativeLayout
    android:id="@+id/relativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainBeverageActivity">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ques"
        android:paddingBottom="10dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        />


            <TextView
                android:id="@+id/temp"
                android:layout_below="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:paddingRight="3dp"
                android:paddingBottom="3dp"
                />

    <ToggleButton
        android:id="@+id/checkTemperature"
        android:textOn="@string/hot"
        android:textOff="@string/cold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toasterOn"
        android:layout_marginStart="19dp"
        android:layout_below="@+id/question"
        android:layout_toEndOf="@+id/temp" />

    <CheckBox
        android:id="@+id/checkbox_milk"
        android:layout_below="@id/checkTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk"
        android:onClick="onCheckBoxClick"
        />

    <CheckBox
        android:id="@+id/checkbox_sugar"
        android:layout_below="@id/checkbox_milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        android:onClick="onCheckBoxClick"
        />

    <CheckBox
        android:id="@+id/checkbox_lemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lemon"
        android:layout_below="@id/checkbox_sugar"
        android:onClick="onCheckBoxClick"
        />
</RelativeLayout>



